k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartneighbor
  labels:
    app.kubernetes.io/name: smartneighbor
